--- a/Meetup/resources/css/app.css
+++ b/Meetup/resources/css/app.css
@@ -11,6 +11,10 @@ body {
     -ms-user-select: none; /* For Internet Explorer/Edge */
 }
 
+.custom-inward-curve {
+    clip-path: polygon(0 0, 100% 0, 180% 100%, 0 100%, 0 50%, 50% 0);
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
@@ -18,18 +22,18 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(204, 204, 204);
+    box-shadow: inset 0 0 5px rgb(109, 106, 106);
     border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgb(192, 191, 191);
+    background: rgb(121, 117, 117);
     border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #b3aeae;
+    background: #828080;
     height: 5px;
 }
